--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby": "^4.13.0",
     "gatsby-cli": "^4.13.0",
     "gatsby-plugin-gatsby-cloud": "^4.13.0",
+    "gatsby-plugin-google-analytics": "^4.13.0",
     "gatsby-plugin-image": "^2.13.0",
     "gatsby-plugin-manifest": "^4.13.0",
     "gatsby-plugin-offline": "^5.13.0",
